Ad markdown header thing back

--- a/sql-articles.html
+++ b/sql-articles.html
@@ -1,4 +1,8 @@
---- layout: page title: SQL Server Articles permalink: /sql/ ---
+--- 
+layout: page 
+title: SQL Server Articles 
+permalink: /sql/ 
+---
 
 <div id="wrap" class="container-fluid">
     <div class="row">
