--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Blog
 description: Random posts about random things
-featured_image: /images/demo/blog.jpg
+featured_image: /images/hero-images/laptop-notebook.jpg
 ---
 
 <section class="hero hero--single">
