--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Blog
+title: Articles
 description: Random posts about random things
 featured_image: /images/hero-images/laptop-notebook.jpg
 ---
