Missed from last change

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ featured_image: /images/hero-images/laptop-notebook.jpg
 
 	<div class="wrap">
 
-		<h1>Blog</h1>
+		<h1>Articles</h1>
 		<p>Random posts about random things.</p>
 
 	</div>
